--- a/dot2ll.vcxproj.filters
+++ b/dot2ll.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="include\CFGUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LowerReconvCFG.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
