--- a/dot2ll.vcxproj
+++ b/dot2ll.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="include\CFGUtils.h" />
     <ClInclude Include="include\ControlFlowGraph.h" />
     <ClInclude Include="include\Dot2CFG.h" />
+    <ClInclude Include="LowerReconvCFG.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
