--- a/dot2ll.vcxproj.filters
+++ b/dot2ll.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="src\DominatorTree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\NodeOrdering.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\dotparse\include\DotGraph.h">
@@ -84,6 +87,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\DominatorTree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\NodeOrdering.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
