--- a/dot2ll.vcxproj.filters
+++ b/dot2ll.vcxproj.filters
@@ -101,5 +101,8 @@
     <ClInclude Include="..\dotparse\include\DotWriter.h">
       <Filter>Header Files\DotParser</Filter>
     </ClInclude>
+    <ClInclude Include="CheckReconvergence.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
